--- a/my.kv
+++ b/my.kv
@@ -53,7 +53,11 @@
         on_active: self.parent.if_active()
     Image:
         id: lp_image
-        size: (150, 350)
+        allow_stretch: True
+        keep_ratio: True
+        size_hint_x: None
+        size_hint_y: None
+        width: 130
     Label:
         id: predicted_text
     Label:
