fixed LP's descending order (newest at top)

--- a/my.kv
+++ b/my.kv
@@ -44,7 +44,7 @@
             pos: self.parent.x + self.margin, self.y + self.margin + 1
             size: self.parent.width - 2 * self.margin , self.thickness
 
-<Record@BoxLayout>:
+<Record@GridLayout>:
     #spacing: 5
     orientation: 'horizontal'
     CheckBox:
