Adding background for the booting screen

--- a/my.kv
+++ b/my.kv
@@ -135,7 +135,7 @@
     on_enter: root.do_everything()
     canvas.before:
         Rectangle:
-            source: '/home/valkov/Pictures/bg.jpg'
+            source: 'icons/bg.jpg'
             size: self.size
             pos: self.pos
     FloatLayout:
