--- a/my.kv
+++ b/my.kv
@@ -56,6 +56,7 @@
                 padding: [350, 0, 250, 0]
                 # Settings buttons
                 SettingsButton:
+                    on_press: app.open_settings()
                     ImageSettingsButtons:
                         source: 'icons/set.png'
                 SettingsButton:
