Connecting video/cam toggle buttons

--- a/my.kv
+++ b/my.kv
@@ -5,6 +5,14 @@
     height: 30
     pos: self.parent.pos
     center: self.parent.center
+    background_color: (0, 0, 0, 0) if self.state != 'down' else (1, 1, 1, 1)
+<ToggleButton@ToggleButton>:
+    size_hint: (None, None)
+    width: 30
+    height: 30
+    pos: self.parent.pos
+    center: self.parent.center
+    background_color: (0, 0, 0, 0) if self.state != 'down' else (1, 1, 1, 1)
 <ImageSettingsButtons@Image>:
     size: self.parent.size
     pos: self.parent.pos
@@ -106,6 +114,24 @@
         Line:
             width: .5
             rounded_rectangle: self.x, self.y, self.width, self.height, 50, 50, 50, 50, 50
+<LoadDialog>:
+    BoxLayout:
+        size: root.size
+        pos: root.pos
+        orientation: "vertical"
+        FileChooserIconView:
+            id: filechooser
+
+        BoxLayout:
+            size_hint_y: None
+            height: 30
+            Button:
+                text: "Cancel"
+                on_release: root.cancel()
+
+            Button:
+                text: "Load"
+                on_release: root.load(filechooser.path, filechooser.selection)
 
 <DataGrid>:
 <MainScreen>:
@@ -171,10 +197,17 @@
                 SettingsButton:
                     ImageSettingsButtons:
                         source: 'icons/db.png'
-                SettingsButton:
+                ToggleButton:
+                    id: video_toggle
+                    group: 'vid_cam'
+                    state: 'normal'
+                    on_state: main_screen.show_load() if self.state == 'down' else 'normal'
                     ImageSettingsButtons:
                         source: 'icons/vid.png'
-                SettingsButton:
+                ToggleButton:
+                    id: cam_toggle
+                    group: 'vid_cam'
+                    state: 'down'
                     ImageSettingsButtons:
                         source: 'icons/cam.png'
                 Widget:
