--- a/my.kv
+++ b/my.kv
@@ -30,7 +30,7 @@
             #points: self.x, self.y - 5, self.x + self.width, self.y - 5
     canvas:
         Color:
-            rgba: 0, 0, 0, .3
+            rgba: self.flag
         RoundedRectangle:
             size: (self.size[0], self.size[1] + 10)
             radius: [20,]
